fixed burger menu z-index

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -4,7 +4,7 @@ nav {
     background-color: var(--color-background);
     width: 100vw;
     max-width: 100%;
-    z-index: 2;
+    z-index: 3;
 }
 
 .nav-container {
@@ -82,7 +82,7 @@ nav {
         display: block;
         background-color: var(--color-background);
         position: fixed;
-        z-index: 1;
+        z-index: 2;
         top: 0;
         left: 0;
         right: 0;
